force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/XC_AFCC_Cost_Ledger__c.object-meta.xml
<CustomObject>
    <label>Cost Ledger</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>XC AFCC Cost Ledger</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>