force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Account_Id__c</fullName>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>