force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Action_Id__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Action_Id__c</fullName>
    <label>Action Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>