force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Agent_Name__c</fullName>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>