force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Agent_Version__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Agent_Version__c</fullName>
    <label>Agent Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>