force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Allocated_Cost__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Allocated_Cost__c</fullName>
    <label>Allocated Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>