force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Allocation_Method__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Allocation_Method__c</fullName>
    <label>Allocation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRIMARY_CASE</fullName>
                <label>Primary Case</label>
            </value>
            <value>
                <fullName>EVEN_SPLIT</fullName>
                <label>Even Split</label>
            </value>
            <value>
                <fullName>IMPORTED</fullName>
                <label>Imported</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>