force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Calculation_Basis__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Calculation_Basis__c</fullName>
    <label>Calculation Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTUAL</fullName>
                <label>Actual</label>
            </value>
            <value>
                <fullName>IMPORTED</fullName>
                <label>Imported</label>
            </value>
            <value>
                <fullName>SYNTHETIC</fullName>
                <label>Synthetic</label>
            </value>
            <value>
                <fullName>ESTIMATED</fullName>
                <label>Estimated</label>
            </value>
            <value>
                <fullName>ALLOCATED</fullName>
                <label>Allocated</label>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
                <label>Incomplete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>