force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Case_Status__c</fullName>
    <label>Case Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>