force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Confidence_Level__c</fullName>
    <label>Confidence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>