force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Conversations_Used__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Conversations_Used__c</fullName>
    <label>Conversations Used</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>