force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Deterministic_Key__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Deterministic_Key__c</fullName>
    <label>Deterministic Key</label>
    <length>255</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>