force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Source_Staging_Record__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Source_Staging_Record__c</fullName>
    <label>Source Staging Record</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>XC_AFCC_Usage_Staging__c</referenceTo>
    <relationshipLabel>Source Staging Record</relationshipLabel>
    <relationshipName>XC_AFCC_CostLedgerStagingRows</relationshipName>
    <type>Lookup</type>
</CustomField>