force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Usage_Date__c</fullName>
    <label>Usage Date</label>
    <type>Date</type>
</CustomField>