force-app/core/default/objects/XC_AFCC_Cost_Ledger__c/fields/XC_AFCC_Usage_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Usage_Timestamp__c</fullName>
    <label>Usage Timestamp</label>
    <type>DateTime</type>
</CustomField>